# neurips_insights

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
neurips_insights/: __init__.py  analyze.py  briefs.py  cli.py  config.py  corpus.py  embeddings.py  llm.py  llm_deep.py  scrape.py  stats.py  temporal.py  topics.py
test_folder/: ollama_connection_test.py
