[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neurips-insights"
version = "0.1.0"
description = "Analyze NeurIPS papers from titles + abstracts only — themes, topics, and trends without downloading PDFs."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Mahdi" }]
keywords = ["neurips", "nlp", "topic-modeling", "bertopic", "research-trends"]

# Core deps: scraping + streaming stats only. Heavy ML is optional.
dependencies = [
    "requests>=2.28",
    "beautifulsoup4>=4.11",
]

[project.optional-dependencies]
# Deep embedding-native analysis (clusters, search, neighbors, trends)
analyze = [
    "sentence-transformers>=2.2",
    "scikit-learn>=1.2",
    "numpy>=1.23",
    "hdbscan>=0.8",
]
# Embedding-based topic modeling (legacy --topics path)
topics = [
    "sentence-transformers>=2.2",
    "scikit-learn>=1.2",
    "scipy>=1.9",
    "numpy>=1.23",
]
# Richer legacy topic path
bertopic = [
    "bertopic>=0.16",
    "sentence-transformers>=2.2",
    "scikit-learn>=1.2",
    "umap-learn>=0.5",
    "hdbscan>=0.8",
]
all = [
    "neurips-insights[analyze,topics,bertopic]",
]

[project.scripts]
neurips-insights = "neurips_insights.cli:main"

[project.urls]
Homepage = "https://github.com/yourname/neurips-insights"
Issues = "https://github.com/yourname/neurips-insights/issues"

[tool.setuptools.packages.find]
include = ["neurips_insights*"]
